--- a/src/styles.css
+++ b/src/styles.css
@@ -1438,7 +1438,7 @@ top: 0px !important;
     width: 80px;
   }
 
-  .small-buttom {
+  .small-button {
     margin: 0 0.3em 0.2rem 0;
     padding: 0.3rem 0.6rem;
   }
