mdb pagination safety commit

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,8 +6,9 @@
         <hr>
         <h2>Templates</h2>
 
+        <!-- <table-pagination></table-pagination> -->
         <app-table></app-table>
-        
+
         <button [ngStyle]="{'float':'right','margin-top':'1.5rem'}">Add Template</button>
     </div>
     <app-nav-bar-form></app-nav-bar-form>
