--- a/src/app/components/templates/footer/footer.component.html
+++ b/src/app/components/templates/footer/footer.component.html
@@ -5,7 +5,7 @@
         <a class="prsb-pad-10" href="mailto:opssd@ontario.ca">opssd@ontario.ca</a>
 
         <!-- <a href="#" [routerLink]="['/about', {id: 'about'}]" class="prsb-pad-10"> -->
-        <a href="">About
+        <a href="#">About
         </a>
 <!--        <a href="/about" class="prsb-pad-10">About</a>-->
 
