--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,12 +5,11 @@
         <p class="">Find your templates, add new ones, edit or delete them.</p>
         <hr>
         <h2>Templates</h2>
-
-        <!-- <table-pagination></table-pagination> -->
+        
         <app-table></app-table>
 
         <button [ngStyle]="{'float':'right','margin-top':'1.5rem'}">Add Template</button>
     </div>
-    <app-nav-bar-form></app-nav-bar-form>
+    <!-- <app-nav-bar-form></app-nav-bar-form> -->
     <app-footer-form></app-footer-form>
 </div>
