--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,9 @@
-<table mdbTable #tableEl="mdbTable" class="prsb-detail-table" style="width:100%">
+<select class="selection-size" style="margin-bottom: 0rem" (change)="onTableSizeChange($event)" >
+    <option *ngFor="let size of tableSizes" [selected]="tableSize === size">
+        {{ size }}
+    </option>
+</select>
+<table class="prsb-detail-table" style="width:100%">
     <thead>
         <tr>
             <th>
@@ -7,22 +12,33 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let template of templates; let i = index">
-            <td *ngIf="i + 1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex" scope="row">
-                <a target="_blank" routerLink="view/:{{template?.serviceCode}}">{{template?.name}}</a>
+        <tr *ngFor="let template of templates | paginate : {
+            itemsPerPage : tableSize,
+            currentPage : page,
+            totalItems : count
+            };
+            let i = index;">
+            <td *ngIf="">
+                <a target="_blank" routerLink="view/:{{template?.service_code?.service_code}}">{{template?.id}}</a>
             </td>
         </tr>
     </tbody>
     <tfoot>
         <tr>
             <td [ngStyle]="{'background-color':'#ededed'}">
-                <mdb-table-pagination dashKeyword="..." [ngStyle]="{'cursor':'pointer'}" [tableEl]="tableEl"
-                    [searchDataSource]="templates" class="prsb-vertic-center">
-                </mdb-table-pagination>
+                
             </td>
         </tr>
     </tfoot>
 </table>
+
+<div style="justify-content: center;">
+    <pagination-controls
+            previousLabel="Prev"
+            nextLabel="Next"
+            (pageChange)="onTableDataChange($event)">
+    </pagination-controls>
+</div>
 
 
 <!-- <div class="container">
