--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,8 +1,10 @@
 <table class="prsb-detail-table" style="width:100%">
     <thead>
         <tr>
-            <th style="position:relative"> <h5 class="prsb-white-text prsb-justify-content-left">Name</h5>
-                <select class="selection-size" style=" position:absolute; right:0; top:0; margin: .4rem" (change)="onTableSizeChange($event)">
+            <th style="position:relative">
+                <h5 class="prsb-white-text prsb-justify-content-left">Name</h5>
+                <select class="selection-size" style="border-radius:.5rem;position:absolute; right:0; top:0; margin: .4rem"
+                    (change)="onTableSizeChange($event)">
                     <option *ngFor="let size of tableSizes" [selected]="tableSize === size">
                         {{ size }}
                     </option>
@@ -18,7 +20,7 @@
             };
             let i = index;">
             <td *ngIf="">
-                <a target="_blank" routerLink="view/:{{template?.service_code?.service_code}}">{{template?.id}}</a>
+                <a target="_blank" routerLink="view/:{{template?.service?.code}}">{{template?.service?.name}}</a>
             </td>
         </tr>
     </tbody>
@@ -31,31 +33,8 @@
     </tfoot>
 </table>
 
-<div style="justify-content: center;">
-    <pagination-controls previousLabel="Prev" nextLabel="Next" (pageChange)="onTableDataChange($event)">
-    </pagination-controls>
-</div>
-
-
-<!-- <div class="container">
-    <table mdbTable #tableEl="mdbTable" class="z-depth-1">
-        <thead>
-            <tr>
-                <th>Name</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let el of elements; let i = index">
-                <td *ngIf="i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex">
-                    {{el.first}}</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>
-                    <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="elements"></mdb-table-pagination>
-                </td>
-            </tr>
-        </tfoot>
-    </table>
-</div> -->
+<pagination-controls 
+    previousLabel="Prev" 
+    nextLabel="Next" 
+    (pageChange)="onTableDataChange($event)">
+</pagination-controls>
