fixed templates not showing

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -19,8 +19,8 @@
             totalItems : count
             };
             let i = index;">
-            <td *ngIf="">
-                <a target="_blank" routerLink="view/:{{template?.service?.code}}">{{template?.service?.name}}</a>
+            <td>
+                <a target="_blank" routerLink="view/:{{template?.serviceCodeEntity?.service_code}}">{{template?.serviceCodeEntity?.name}}</a>
             </td>
         </tr>
     </tbody>
