--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,15 +1,6 @@
-<app-header-form></app-header-form>
-<div class="prsb-col">
-    <div class="main">
-        <h1>PDF template manager</h1>
-        <p class="">Find your templates, add new ones, edit or delete them.</p>
-        <hr>
-        <h2>Templates</h2>
-        
-        <app-table></app-table>
 
-        <button [ngStyle]="{'float':'right','margin-top':'1.5rem'}">Add Template</button>
-    </div>
-    <!-- <app-nav-bar-form></app-nav-bar-form> -->
-    <app-footer-form></app-footer-form>
-</div>
+<h2>Templates</h2>
+
+<app-table></app-table>
+
+<button routerLink="/templates/add-new-template" [ngStyle]="{'float':'right','margin-top':'1.5rem'}">Add Template</button>
