add routes | refactor files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,12 @@
-<!-- <div class="prsb-header prsb-horiz-and-vertic-center prsb-skip-link ">
-  <header class="prsb-logo-text">Ontario</header>
-  <input type="text">
-</div>
-
-<div class="prsb-logo"></div>
-<hr>
-
-<div class="prsb-main">
-  <h3 class = "prsb-left-align">Template Manager</h3>  
-    <p><abbr title="">LCBO</abbr>
-      (Liqueor Convinience Bartender Organization)
-    </p>
-</div>
-<footer class="prsb-footer">
-    <a href="" class="">about</a>
-    <hr>
-    <a href="">contact us</a>
-    <hr>
-    <a href="">mail</a>
-    <hr>
-    <a href="">instagram</a>
-    <hr>
-    <button class="prsb-button prsb-bold-text">Button</button>
-</footer> -->
-
 <!-- <app-home></app-home> -->
-<app-home></app-home>
+<app-header-form></app-header-form>
+
+<div class="prsb-col prsb-main-content">
+    <div class="main">
+    <h1>PDF template manager</h1>
+    <p class="">Find your templates, add new ones, edit or delete them.</p>
+        <hr>
+    </div>
+    <router-outlet></router-outlet>
+</div>
+<app-footer-form></app-footer-form>
