add add_template | start implementing  app_initializer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <app-home></app-home> -->
 <app-header-form></app-header-form>
 
-<div class="prsb-col prsb-main-content">
+<div class="prsb-col prsb-container">
     <div class="main">
     <h1>PDF template manager</h1>
     <p class="">Find your templates, add new ones, edit or delete them.</p>
@@ -9,4 +9,5 @@
     </div>
     <router-outlet></router-outlet>
 </div>
+
 <app-footer-form></app-footer-form>
