--- a/src/app/components/details/edit/edit.component.html
+++ b/src/app/components/details/edit/edit.component.html
@@ -1,3 +1,7 @@
-<p>edit works!</p>
+<div style="padding-bottom:7rem">
 
-<app-go-back></app-go-back>
+    <p>edit works!</p>
+
+    <app-go-back></app-go-back>
+
+</div>
