--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,5 @@
-
 <h2>Templates</h2>
 
 <app-table></app-table>
 
-<button routerLink="/templates/add-new-template" [ngStyle]="{'float':'right','margin-top':'1.5rem'}">Add Template</button>
+<button routerLink="/templates/add-new-template" [ngStyle]="{'float':'right','margin':'1.5rem 0 7rem 0'}">Add Template</button>
