--- a/src/app/components/templates/back/back.component.css
+++ b/src/app/components/templates/back/back.component.css
@@ -1,6 +1,13 @@
-.clickable{
+a{
     color:#06c;
-    font-size: 1.2rem;
     cursor:pointer;
-    text-decoration: underline;
 }
+
+svg{
+    fill:"#06c";
+}
+
+/* 
+a:hover{
+    text-decoration: underline;
+} */
