--- a/src/app/components/templates/back/back.component.html
+++ b/src/app/components/templates/back/back.component.html
@@ -1,7 +1,9 @@
 
-<a (click)="goBack()" class="nav-link" style="cursor:pointer">
-    <svg class="ui-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="18" fill="none">
-        <path d="M15.4 7.4L14 6l-6 6 6 6 1.4-1.4-4.58-4.6 4.58-4.6z" fill="#000" />
+<br>
+
+<a (click)="goBack()">
+    <svg class="ui-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="18" fill="#06c">
+        <path d="M15.4 7.4L14 6l-6 6 6 6 1.4-1.4-4.58-4.6 4.58-4.6z"/>
     </svg>
     Back
 </a>
