finish add-template add highlighting

--- a/src/app/components/add-template/add-template.component.css
+++ b/src/app/components/add-template/add-template.component.css
@@ -1,3 +1,13 @@
 .round-corner{
     border-radius : .3rem;
 }
+
+/* .wrong-service{ */
+    /* color: #d00 !important; */
+    /* border-color: #dd0000 !important; */
+/* } */
+
+.wrong{
+    color: #d00 !important;
+    /* border-color: #dd0000 !important; */
+}
