--- a/src/app/components/add-template/add-template.component.html
+++ b/src/app/components/add-template/add-template.component.html
@@ -1,7 +1,10 @@
 <div style="padding-bottom : 7rem">
-    <label for="serviceCode">Service</label>
-    <select [(ngModel)]="template.serviceCodeEntity.service_code" name="serviceCode" id="serviceCode" class="round-corner prsb-med">
-    <!-- <select [(ngModel)]="template.serviceCodeEntity.service_code" name="serviceCode" id="serviceCode" class="round-corner prsb-med"> -->
+    <label for="serviceCode"
+    [ngClass]="(!isValid && !this.serviceCheck())?'wrong':''">
+    Service <small>(required)</small></label>
+    <p class="hint">Choose a home for your template</p>
+    <select [(ngModel)]="template.serviceCodeEntity.service_code" name="serviceCode" id="serviceCode"
+        class="round-corner prsb-med">
         <option *ngFor="let service of services; let i = index" value="{{service.service_code}}">
             {{service.name}}</option>
     </select>
@@ -9,17 +12,29 @@
     <div class="prsb-sm">
 
 
-        <label for="effDate">Effective Date</label>
+        <label for="effDate">Effective date <small>(optional)</small> </label>
         <input [(ngModel)]="template.effective_date" class="round-corner" type="date" name="effDate" id="effDate" />
 
-        <label for="expDate">Expiry Date</label>
+        <label for="expDate">Expiry date <small>(optional)</small></label>
         <input [(ngModel)]="template.end_date" class="round-corner" type="date" name="expDAte" id="">
+
+
+        <!-- add html input | work on app_initializer | start update template -->
 
 
     </div>
 
-    <button type="submit" (click)="addTemplate()">Add template</button>
+    <!-- <div> -->
+    <label for="upload"
+    [ngClass]="(!isValid && !this.getExt())?'wrong':''"
 
+    >Upload a template <small>(required)</small></label>
+    <p class="hint">Browse your local machine to upload a file of type html or txt</p>
+    <app-file-upload id="upload" name="upload"></app-file-upload>
+    <!-- </div> -->
+
+    <i *ngIf="!isValid" style="color:red" class="error">Fix the fields highlighted with red to add a template</i><br>
+    <button type="submit" (click)="addTemplate()">Add template</button>
 
     <app-go-back></app-go-back>
 
