--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,7 @@
 <h2>Templates</h2>
 
+<!-- <app-success></app-success> -->
+
 <app-table></app-table>
 
 <button routerLink="/templates/add-new-template" [ngStyle]="{'float':'right','margin':'1.5rem 0 7rem 0'}">Add Template</button>
