--- a/src/app/components/templates/success/success.component.html
+++ b/src/app/components/templates/success/success.component.html
@@ -7,7 +7,7 @@
             <path fill="#fff" d="M 5 12 l 5 5 l 8.58 -8.58 L 17.17 7 L 10 14.17 L 6.4 10.6 L 5 12 Z" />
         </svg>
         <p class="prsb-green success-text">
-            Template successfully added
+            Success!
             <svg (click)="close()" class="icon close" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24">
                 <path fill="#000"
                 d="M 19 6.4 L 17.6 5 L 12 10.6 L 6.4 5 L 5 6.4 l 5.6 5.6 L 5 17.6 L 6.4 19 l 5.6 -5.6 l 5.6 5.6 l 1.4 -1.4 l -5.6 -5.6 L 19 6.4 Z" />
