--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -9,15 +9,15 @@
 <a class="clickable">View template</a>
 <br/><br/>
 
-<!-- <h3>Effective Date : {{template?.effective_date}}</h3> -->
-<div *ngIf="template.end_date" class="prsb-lg">
+<p>Effective since: {{template?.effective_date}}</p>
+<div *ngIf="template?.end_date" class="prsb-lg">
     <div id="alertMessagesBox" class="prsb-alert-box prsb-warning ">
         <span class="prsb-lg-text">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" fill="none">
                 <path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z" fill="#ffd440" />
                 <path d="M11 10h2v4h-2zm0 6h2v2h-2z" fill="#000" />
             </svg>
-            Expires {{template?.end_date}}</span>
+            Expires {{template.end_date}}</span>
     </div>
 </div>
 
