--- a/src/app/components/templates/header/header.component.html
+++ b/src/app/components/templates/header/header.component.html
@@ -1,5 +1,5 @@
 <div id="headerRoot" style="background-color: #333;">
-    <header id="header" class="prsb-header" style="width: 97%; margin: 0 auto;">
+    <header (click)="goHome()" id="header" class="prsb-header" style="width: 97%; margin: 0 auto; cursor: pointer;">
         <div id="left" style="width: 25%;">
             <img class="prsb-pad-10" style="width: 9.375rem; height: auto; border: 0; margin-left: 1.5em;" 
             src="https://intra.dev.dp.health.gov.on.ca/images/ontario_logo.png" alt="Ontario Government Logo" />
