--- a/src/app/components/details/view/view.component.html
+++ b/src/app/components/details/view/view.component.html
@@ -1,1 +1,4 @@
-<div class="content" [innerHTML]="template.html! | safeHtml"></div>
+<div class="container">
+    <div class="content" [innerHTML]="template?.html! | safeHtml"></div>
+    <app-go-back></app-go-back>
+</div>
